leptos_macro/tests/view/09_generic_prop_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `generic_fun` on component `Inner`
  --> tests/view/09_generic_prop_wrong_type.rs:10:48
   |
10 |             <Inner concrete_i32=42 generic_fun=true>
   |                                                ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Fn() -> bool` — a closure or function reference
note: required for `bool` to implement `Check_generic_fun`
  --> tests/view/09_generic_prop_wrong_type.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
note: required by a bound in `__Inner::Helper::<F>::check_and_wrap_generic_fun`
  --> tests/view/09_generic_prop_wrong_type.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `Helper::<F>::check_and_wrap_generic_fun`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `extract_value` exists for struct `Wrap_generic_fun<bool>`, but its trait bounds were not satisfied
  --> tests/view/09_generic_prop_wrong_type.rs:10:48
   |
10 |             <Inner concrete_i32=42 generic_fun=true>
   |                                                ^^^^ method cannot be called on `Wrap_generic_fun<bool>` due to unsatisfied trait bounds
...
17 | #[component]
   | ------------ method `extract_value` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/09_generic_prop_wrong_type.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
